apps/base/new-new-boplats/database/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-new-boplats-mongo-express
  namespace: default
spec:
  selector:
    app: new-new-boplats-mongo-express
  ports:
    - name: http
      port: 8081
      targetPort: 8081
