apps/base/new-new-boplats/database/admin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-admin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats-admin.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: new-new-boplats-admin
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
